force-app/main/default/objects/Policy_Information__c/Policy_Information__c.object-meta.xml
<CustomObject>
    <label>Policy Information</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>