force-app/main/default/objects/Policy_Information__c/fields/A4Me_Mini_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>A4Me_Mini_Scorecard__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>A4Me Mini Scorecard</label>
    <length>50</length>
    <type>Text</type>
</CustomField>