force-app/main/default/objects/Policy_Information__c/fields/Account_Structure_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Structure_2__c</fullName>
    <formula>IF(AND((Account_Structure__c * 4) &gt;= $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_1_250.Start_Range__c,
        (Account_Structure__c * 4) &lt;= $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_1_250.End_Range__c),
   (Account_Structure__c * 4) * $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_1_250.Weightage__c,

IF(AND((Account_Structure__c * 4) &gt;= $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_251_350.Start_Range__c,
        (Account_Structure__c * 4) &lt;= $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_251_350.End_Range__c),
   (Account_Structure__c * 4) * $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_251_350.Weightage__c,

IF(AND((Account_Structure__c * 4) &gt;= $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_351_500.Start_Range__c,
        (Account_Structure__c * 4) &lt;= $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_351_500.End_Range__c),
   (Account_Structure__c * 4) * $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_351_500.Weightage__c,

IF(AND((Account_Structure__c * 4) &gt;= $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_501_750.Start_Range__c,
        (Account_Structure__c * 4) &lt;= $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_501_750.End_Range__c),
   (Account_Structure__c * 4) * $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_501_750.Weightage__c,

IF(AND((Account_Structure__c * 4) &gt;= $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_751_or_More.Start_Range__c),
   (Account_Structure__c * 4) * $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Account_Structure_Range_751_or_More.Weightage__c, 0)))))</formula>
    <label>Account Structure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>