force-app/main/default/objects/Policy_Information__c/fields/Account_Structure__c.field-meta.xml
<CustomField>
    <fullName>Account_Structure__c</fullName>
    <inlineHelpText>Account Structure is what is loaded to InfoPort and CPS.</inlineHelpText>
    <label>Account Structure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>