force-app/main/default/objects/Policy_Information__c/fields/Accum_Files_50__c.field-meta.xml
<CustomField>
    <fullName>Accum_Files_50__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Files managed by the Client Manager.  Examples of accumulator files could be Combined Med/RX, Combined MHSA/RX, Infertility, etc.  Both internal and external files count. Input actual number.</inlineHelpText>
    <label>Accum Files(.50)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>