force-app/main/default/objects/Policy_Information__c/fields/Accum_Files_Range_Backend__c.field-meta.xml
<CustomField>
    <fullName>Accum_Files_Range_Backend__c</fullName>
    <formula>IF(AND( Accum_Files_50__c &gt;= $CustomMetadata.Capacity_Plan_Accum_Files__mdt.Range_0_0.Start_Range__c,
Accum_Files_50__c &lt;= $CustomMetadata.Capacity_Plan_Accum_Files__mdt.Range_0_0.End_Range__c),
$CustomMetadata.Capacity_Plan_Accum_Files__mdt.Range_0_0.Weightage__c,

IF(AND( Accum_Files_50__c &gt;= $CustomMetadata.Capacity_Plan_Accum_Files__mdt.Range_1_1.Start_Range__c,
Accum_Files_50__c &lt;= $CustomMetadata.Capacity_Plan_Accum_Files__mdt.Range_1_1.End_Range__c),
$CustomMetadata.Capacity_Plan_Accum_Files__mdt.Range_1_1.Weightage__c,
$CustomMetadata.Capacity_Plan_Accum_Files__mdt.Range_2_more.Weightage__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accum Files Range(Backend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>