force-app/main/default/objects/Policy_Information__c/fields/Active_ASO_Benefit_Sets_Score__c.field-meta.xml
<CustomField>
    <fullName>Active_ASO_Benefit_Sets_Score__c</fullName>
    <formula>Total_Active_ASO_Benefit_Sets_Count__c * Total_Active_Benefit_Set_Count_Weightage__c</formula>
    <label>Active ASO Benefit Sets Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>