force-app/main/default/objects/Policy_Information__c/fields/Active_FI_Benefit_Sets_Score__c.field-meta.xml
<CustomField>
    <fullName>Active_FI_Benefit_Sets_Score__c</fullName>
    <formula>Total_Active_FI_Benefit_Sets_Count__c *  Total_FI_Benefit_Sets_Count_Weightage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active FI Benefit Sets Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>