force-app/main/default/objects/Policy_Information__c/fields/Active_UMR_Plans_2__c.field-meta.xml
<CustomField>
    <fullName>Active_UMR_Plans_2__c</fullName>
    <formula>IF(AND( Active_UMR_Plans__c &gt;=    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_1_30.Start_Range__c  ,Active_UMR_Plans__c &lt;=    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_1_30.End_Range__c ) ,    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_1_30.Weightage__c  * Active_UMR_Plans__c ,

IF(AND(Active_UMR_Plans__c &gt;=     $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_31_50.Start_Range__c  ,
Active_UMR_Plans__c&lt;=    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_31_50.End_Range__c  ),     $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_31_50.Weightage__c   * Active_UMR_Plans__c ,

IF(AND(Active_UMR_Plans__c &gt;=     $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_51_65.Start_Range__c  ,
Active_UMR_Plans__c&lt;=    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_51_65.End_Range__c  ),    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_51_65.Weightage__c  * Active_UMR_Plans__c ,

IF(AND(Active_UMR_Plans__c &gt;=    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_66_80.Start_Range__c  ,
Active_UMR_Plans__c &lt;=    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_66_80.End_Range__c ) ,    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_66_80.Weightage__c  * Active_UMR_Plans__c,

IF(AND(Active_UMR_Plans__c &gt;=    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_81_100.Start_Range__c  ,
Active_UMR_Plans__c &lt;=    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_81_100.End_Range__c  ),    $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_81_100.Weightage__c  * Active_UMR_Plans__c  , 
 IF(Active_UMR_Plans__c &gt;=   $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_101_or_more.Start_Range__c ,   $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Active_UMR_Plans_Range_101_or_more.Weightage__c  * Active_UMR_Plans__c, 0) )))))</formula>
    <label>Active UMR Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>