force-app/main/default/objects/Policy_Information__c/fields/Active_UMR_Plans__c.field-meta.xml
<CustomField>
    <fullName>Active_UMR_Plans__c</fullName>
    <inlineHelpText>An active UMR Plan is defined as a Benefit Plan Design with regular activity requiring at  least annual updates.</inlineHelpText>
    <label>Active UMR Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>