force-app/main/default/objects/Policy_Information__c/fields/Add_ons_Column_V_through_Column_AX__c.field-meta.xml
<CustomField>
    <fullName>Add_ons_Column_V_through_Column_AX__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZZ_Add-ons (Sum of total input value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>