force-app/main/default/objects/Policy_Information__c/fields/Add_ons_Sum_of_total_input__c.field-meta.xml
<CustomField>
    <fullName>Add_ons_Sum_of_total_input__c</fullName>
    <label>Add-ons (Sum of total input value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>