force-app/main/default/objects/Policy_Information__c/fields/Additional_Customer_Care_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Additional_Customer_Care_Commentary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Customer Care Commentary</label>
    <type>TextArea</type>
</CustomField>