force-app/main/default/objects/Policy_Information__c/fields/Additional_Transaction_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Additional_Transaction_Commentary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Transaction Commentary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>