force-app/main/default/objects/Policy_Information__c/fields/Adj_Case_FTE__c.field-meta.xml
<CustomField>
    <fullName>Adj_Case_FTE__c</fullName>
    <formula>(Case_FTEs__c/ Exchange_Factor__c)/ Multiple_Policy_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adj Case FTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>