force-app/main/default/objects/Policy_Information__c/fields/Adj_Case_FTE_for_Outliers__c.field-meta.xml
<CustomField>
    <fullName>Adj_Case_FTE_for_Outliers__c</fullName>
    <formula>Adj_Case_FTE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_Adj Case FTE for Outliersss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>