force-app/main/default/objects/Policy_Information__c/fields/Adj_Case_FTE_for_outlierss__c.field-meta.xml
<CustomField>
    <fullName>Adj_Case_FTE_for_outlierss__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Adj Case FTE for Outliers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>