force-app/main/default/objects/Policy_Information__c/fields/Adjustment_Trending__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Trending__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjustment Trending</label>
    <length>50</length>
    <type>Text</type>
</CustomField>