force-app/main/default/objects/Policy_Information__c/fields/Advocate_Model_Dedicated_or_Designated__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Model_Dedicated_or_Designated__c</fullName>
    <label>Advocate Model (Dedicated or Designated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dedicated</fullName>
            </value>
            <value>
                <fullName>Designated</fullName>
            </value>
            <value>
                <fullName>Highly Designated</fullName>
            </value>
            <value>
                <fullName>Dedicated (EH)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>