force-app/main/default/objects/Policy_Information__c/fields/Appeals__c.field-meta.xml
<CustomField>
    <fullName>Appeals__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appeals</label>
    <length>50</length>
    <type>Text</type>
</CustomField>