force-app/main/default/objects/Policy_Information__c/fields/ASO_Funding__c.field-meta.xml
<CustomField>
    <fullName>ASO_Funding__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <inlineHelpText>Funding type of any of the products is ASO.</inlineHelpText>
    <label>ASO Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>