force-app/main/default/objects/Policy_Information__c/fields/ASO_Specialty_Sets_Score__c.field-meta.xml
<CustomField>
    <fullName>ASO_Specialty_Sets_Score__c</fullName>
    <formula>IF( AND(ASO_Specialty_Sets__c &gt;= 1, ASO_Specialty_Sets__c &lt;= 10), ASO_Specialty_Sets__c *  $CustomMetadata.Capacity_Planning_SBC_Calculation_Weight__mdt.Weightages.ASO_Specialty_Sets_Weightage__c * 12,
				
	IF(ASO_Specialty_Sets__c &gt; 10, ((ASO_Specialty_Sets__c - 10)*0.25+100)*12, 0))</formula>
    <label>ASO Specialty Sets Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>