force-app/main/default/objects/Policy_Information__c/fields/B2H__c.field-meta.xml
<CustomField>
    <fullName>B2H__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <inlineHelpText>Bridge 2 Health product present</inlineHelpText>
    <label>B2H</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>