force-app/main/default/objects/Policy_Information__c/fields/BAR_Approval_and_Target_Implementati__c.field-meta.xml
<CustomField>
    <fullName>BAR_Approval_and_Target_Implementati__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BAR - Approval # and Target Impl Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>