force-app/main/default/objects/Policy_Information__c/fields/BAR_Description_of_Request__c.field-meta.xml
<CustomField>
    <fullName>BAR_Description_of_Request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BAR - Description of Request</label>
    <type>TextArea</type>
</CustomField>