force-app/main/default/objects/Policy_Information__c/fields/Cal_Year_vs_Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Cal_Year_vs_Plan_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cal Year vs. Plan Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>