force-app/main/default/objects/Policy_Information__c/fields/Call_Containment__c.field-meta.xml
<CustomField>
    <fullName>Call_Containment__c</fullName>
    <label>Call Containment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Designated</fullName>
            </value>
            <value>
                <fullName>Highly Designated</fullName>
            </value>
            <value>
                <fullName>Dedicated</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Specialty Benefits</fullName>
            </value>
            <value>
                <fullName>OHCA</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>