force-app/main/default/objects/Policy_Information__c/fields/Call_Data_Report__c.field-meta.xml
<CustomField>
    <fullName>Call_Data_Report__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Data Report</label>
    <length>50</length>
    <type>Text</type>
</CustomField>