force-app/main/default/objects/Policy_Information__c/fields/Capacity_Plan__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Plan__c</fullName>
    <description>This backend field will be updated to calculate Case FTE- since formula field, process builder as part of Capacity Planing enhancements</description>
    <label>Capacity Plan(Case FTEs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>