force-app/main/default/objects/Policy_Information__c/fields/Carve_in_Pharmacy_0_5__c.field-meta.xml
<CustomField>
    <fullName>Carve_in_Pharmacy_0_5__c</fullName>
    <inlineHelpText>Choose the RX set-up</inlineHelpText>
    <label>Carve in Pharmacy (0.5)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Navitus</fullName>
            </value>
            <value>
                <fullName>Carve-Out External Vendor</fullName>
            </value>
            <value>
                <fullName>ORX Carve-IN</fullName>
            </value>
            <value>
                <fullName>ORX One Rx</fullName>
            </value>
            <value>
                <fullName>ORX Book 2</fullName>
            </value>
            <value>
                <fullName>0 - No</fullName>
                <isActive>false</isActive>
                <label>0 - No</label>
            </value>
            <value>
                <fullName>0 - No Direct Pharmacy Contract with UHC</fullName>
                <isActive>false</isActive>
                <label>0 - No Direct Pharmacy Contract with UHC</label>
            </value>
            <value>
                <fullName>1 - Direct Pharmacy Contract with UHC (carve-in)</fullName>
                <isActive>false</isActive>
                <label>1 - Direct Pharmacy Contract with UHC (carve-in)</label>
            </value>
            <value>
                <fullName>1 - Yes</fullName>
                <isActive>false</isActive>
                <label>1 - Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>