force-app/main/default/objects/Policy_Information__c/fields/Carve_in_Pharmacy_0_5_Score__c.field-meta.xml
<CustomField>
    <fullName>Carve_in_Pharmacy_0_5_Score__c</fullName>
    <formula>CASE(
    TEXT(Carve_in_Pharmacy_0_5__c),
    &quot;Navitus&quot;, 0.5,
    &quot;Carve-Out External Vendor&quot;, 0.5,
    &quot;ORX Carve-IN&quot;, 0.25,
    &quot;ORX One Rx&quot;, 0.25,
    &quot;ORX Book 2&quot;, 0.25,
    0
) * 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carve in Pharmacy (0.5) Score</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>