force-app/main/default/objects/Policy_Information__c/fields/Carve_In_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Carve_In_Pharmacy__c</fullName>
    <inlineHelpText>Indicate primary type of pharmacy.  CM must be involved in troubleshooting claim payment for carve-out other.</inlineHelpText>
    <label>Pharmacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carve-out Other (Express Scripts, Caremark,etc.)</fullName>
            </value>
            <value>
                <fullName>Carve-out UHC</fullName>
            </value>
            <value>
                <fullName>Carve-in UHC</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>0 - No</fullName>
                <isActive>false</isActive>
                <label>0 - No</label>
            </value>
            <value>
                <fullName>1 - Yes</fullName>
                <isActive>false</isActive>
                <label>1 - Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>