force-app/main/default/objects/Policy_Information__c/fields/Carve_In_Pharmacy_Backend__c.field-meta.xml
<CustomField>
    <fullName>Carve_In_Pharmacy_Backend__c</fullName>
    <formula>CASE(Carve_In_Pharmacy__c,
&quot;Carve-out Other (Express Scripts, Caremark,etc.)&quot;,0.10,
&quot;Carve-out UHC&quot;,0.25,
&quot;Carve-in UHC&quot;,0.5,
&quot;Both&quot;,0.5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carve - In Pharmacy(Backend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>