force-app/main/default/objects/Policy_Information__c/fields/Carved_Out_Vendor_Management_2__c.field-meta.xml
<CustomField>
    <fullName>Carved_Out_Vendor_Management_2__c</fullName>
    <formula>IF( AND( Carved_Out_Vendor_Management__c &gt;=
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Carved_Out_Vendor_Management_Range_0.Start_Range__c  ,
Carved_Out_Vendor_Management__c &lt;=
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Carved_Out_Vendor_Management_Range_0.End_Range__c  ),
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Carved_Out_Vendor_Management_Range_0.Weightage__c  ,

IF(AND(Carved_Out_Vendor_Management__c &gt;=
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Carved_Out_Vendor_Management_Range_1.Start_Range__c  ,
Carved_Out_Vendor_Management__c &lt;=
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Carved_Out_Vendor_Management_Range_1.End_Range__c  ),
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Carved_Out_Vendor_Management_Range_1.Weightage__c  ,

IF(AND(Carved_Out_Vendor_Management__c &gt;=
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Carved_Out_Vendor_Management_Range_2_5.Start_Range__c  ,
Carved_Out_Vendor_Management__c &lt;=
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Carved_Out_Vendor_Management_Range_2_5.End_Range__c  ),  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Carved_Out_Vendor_Management_Range_2_5.Weightage__c  ,

IF(Carved_Out_Vendor_Management__c &gt;=
 $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Carved_Out_Vendor_Management_range_6.Start_Range__c  ,  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.Carved_Out_Vendor_Management_range_6.Weightage__c  , 0
) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carved-Out Vendor Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>