force-app/main/default/objects/Policy_Information__c/fields/Carved_Out_Vendor_Management__c.field-meta.xml
<CustomField>
    <fullName>Carved_Out_Vendor_Management__c</fullName>
    <inlineHelpText>CMC has direct responsibility for managing external vendor relationships which typically includes regularly scheduled meetings, issue and file resolution, benefit validation/audit, customer care training, monitoring vendor
work. CMC acts as direct point of contact for the vendor and acts &quot;in place of&quot; or as
representative of the customer. CMC brings themes, issues, decisions to the customer
only as needed.</inlineHelpText>
    <label>Carved-Out Vendor Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>