force-app/main/default/objects/Policy_Information__c/fields/Case_FTEs__c.field-meta.xml
<CustomField>
    <fullName>Case_FTEs__c</fullName>
    <formula>Capacity_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_Case FTEs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>