force-app/main/default/objects/Policy_Information__c/fields/CES_Number__c.field-meta.xml
<CustomField>
    <fullName>CES_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CES Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>