force-app/main/default/objects/Policy_Information__c/fields/Cirrus_Number__c.field-meta.xml
<CustomField>
    <fullName>Cirrus_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cirrus Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>