force-app/main/default/objects/Policy_Information__c/fields/CLP__c.field-meta.xml
<CustomField>
    <fullName>CLP__c</fullName>
    <description>Inforce CLP</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CLP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>