force-app/main/default/objects/Policy_Information__c/fields/clt_ops_primary_indicator__c.field-meta.xml
<CustomField>
    <fullName>clt_ops_primary_indicator__c</fullName>
    <label>clt ops primary indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>