force-app/main/default/objects/Policy_Information__c/fields/CMC_Adj_Case_FTE_for_Outliers__c.field-meta.xml
<CustomField>
    <fullName>CMC_Adj_Case_FTE_for_Outliers__c</fullName>
    <label>CMC Adj Case FTE for Outliers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>