force-app/main/default/objects/Policy_Information__c/fields/CMC_CASE_FTE__c.field-meta.xml
<CustomField>
    <fullName>CMC_CASE_FTE__c</fullName>
    <label>CMC Case FTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>