force-app/main/default/objects/Policy_Information__c/fields/CMC_Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>CMC_Complexity_Score__c</fullName>
    <formula>( Complex_Reporting_2__c + Complex_External_Audits_2__c + Carved_Out_Vendor_Management_2__c + Merger_Acquisition_Divestiture_2__c + Network_Strategy_Development_2__c + Technology_Custom_IT_Involvement_2__c + Complex_Customer_Specific_Projects_2__c + New_Product_1st_Year_External_2__c + Surest_Helath_Plan_Backend__c + of_Customer_Related_Meetings_Backend__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CMC Complexity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>