force-app/main/default/objects/Policy_Information__c/fields/COB_Ingenix_Call_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>COB_Ingenix_Call_Opt_Out__c</fullName>
    <label>COB - Ingenix Call Opt Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>