force-app/main/default/objects/Policy_Information__c/fields/COBRA__c.field-meta.xml
<CustomField>
    <fullName>COBRA__c</fullName>
    <defaultValue>&quot;0 - No&quot;</defaultValue>
    <inlineHelpText>COBRA must be carved-in via UHC.</inlineHelpText>
    <label>COBRA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - No</fullName>
            </value>
            <value>
                <fullName>1 - Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>