force-app/main/default/objects/Policy_Information__c/fields/COBRA_Backend__c.field-meta.xml
<CustomField>
    <fullName>COBRA_Backend__c</fullName>
    <formula>CASE(COBRA__c,
&quot;0 - No&quot;,0,
&quot;1 - Yes&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COBRA(Backend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>