force-app/main/default/objects/Policy_Information__c/fields/Company_private_exchange__c.field-meta.xml
<CustomField>
    <fullName>Company_private_exchange__c</fullName>
    <description>Private Exchange Client values</description>
    <formula>TEXT(Company__r.Private_Exchange_Client__c)</formula>
    <label>Company private exchange</label>
    <type>Text</type>
</CustomField>