force-app/main/default/objects/Policy_Information__c/fields/Company_UHC_CI_Members__c.field-meta.xml
<CustomField>
    <fullName>Company_UHC_CI_Members__c</fullName>
    <formula>Company__r.UHC_CI_Members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company UHC CI Members</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>