force-app/main/default/objects/Policy_Information__c/fields/Complex_Customer_Specific_Projects_2__c.field-meta.xml
<CustomField>
    <fullName>Complex_Customer_Specific_Projects_2__c</fullName>
    <formula>IF(AND( Complex_Customer_Specific_Projects__c * 100 &gt;= $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.complex_cust_spec_project_Range_1_25.Start_Range__c ,
Complex_Customer_Specific_Projects__c * 100 &lt;=  $CustomMetadata.Capacity_Plan_Common_Metadata__mdt.complex_cust_spec_project_Range_1_25.End_Range__c ),
$CustomMetadata.Capacity_Plan_Common_Metadata__mdt.complex_cust_spec_project_Range_1_25.Weightage__c , 

IF(AND(Complex_Customer_Specific_Projects__c * 100&gt;=
$CustomMetadata.Capacity_Plan_Common_Metadata__mdt.complex_cust_spec_project_Range_26_50.Start_Range__c ,
Complex_Customer_Specific_Projects__c  *100 &lt;=
$CustomMetadata.Capacity_Plan_Common_Metadata__mdt.complex_cust_spec_project_Range_26_50.End_Range__c ), 
$CustomMetadata.Capacity_Plan_Common_Metadata__mdt.complex_cust_spec_project_Range_26_50.Weightage__c ,

IF(Complex_Customer_Specific_Projects__c *100 &gt;=
$CustomMetadata.Capacity_Plan_Common_Metadata__mdt.complex_cust_spec_project_Range_50.Start_Range__c , 
$CustomMetadata.Capacity_Plan_Common_Metadata__mdt.complex_cust_spec_project_Range_50.Weightage__c , 0) ) )</formula>
    <label>Complex Customer-Specific Projects</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>